--- a/styles.css
+++ b/styles.css
@@ -389,12 +389,6 @@
     margin-bottom: 2rem;
 }
 
-.timeline-date-node {
-    position: absolute;
-    left: 112px;
-    display: flex;
-    align-items: center;
-}
 
 .timeline-node-circle {
     width: 16px;
@@ -417,7 +411,6 @@
 
 .timeline-note-item {
     position: relative;
-    padding: 0.5rem 1rem;
     margin-bottom: 1rem;
     cursor: pointer;
     display: flex;
@@ -427,7 +420,7 @@
 .timeline-note-marker {
     position: absolute;
     left: -40px;
-    width: 20px;
+    width: 10px;
     height: 2px;
     background-color: var(--background-modifier-border);
 }
@@ -541,14 +534,16 @@
 }
 
 .timeline-date-node {
+    display: flex;
     position: absolute;
-    left: 0;  /* 日期靠左对齐 */
-    width: 140px;  /* 固定日期宽度 */
+    left: -147px;
+    width: 140px;
     text-align: right;
     display: flex;
     align-items: center;
     justify-content: flex-end;
     gap: 1rem;
+    flex-direction: row-reverse;
 }
 
 .timeline-node-circle {
@@ -566,7 +561,7 @@
 }
 
 .timeline-notes-list {
-    margin-left: 2rem;  /* 调整笔记列表缩进 */
+    margin-left: 22px;  /* 调整笔记列表缩进 */
 }
 
 /* 卡片内容容器 */
