--- a/styles.sass
+++ b/styles.sass
@@ -277,6 +277,12 @@
             max-width: 100%
             height: auto
 
+          h1
+            color: #ff0
+            font-size: 12px !important
+            line-height: 1.5
+            margin: 0.5em 0
+
 
 
 
@@ -599,11 +605,16 @@
   h6:first-child 
     display: none
 
+/* 统一卡片内所有文本样式 */
+.note-content
+  h1
+    color:#f00
+
 
 /* 统一卡片内所有文本样式 */
 .note-content
   p, li, blockquote, h1, h2, h3, h4, h5, h6
-    font-size: 12px
+    font-size: 12px !important
     line-height: 1.5
     margin: 0.5em 0
 
