可预览图片

--- a/styles.sass
+++ b/styles.sass
@@ -276,9 +276,11 @@
           img 
             max-width: 100%
             height: auto
+            display: block
+            margin: 0.5em 0
+            border-radius: 4px
 
           h1
-            color: #ff0
             font-size: 12px !important
             line-height: 1.5
             margin: 0.5em 0
@@ -613,7 +615,7 @@
 
 /* 统一卡片内所有文本样式 */
 .note-content
-  p, li, blockquote, h1, h2, h3, h4, h5, h6
+  p, li, blockquote, h1, h2, h3, h4, h5, h6,tr,td,code,pre,span
     font-size: 12px !important
     line-height: 1.5
     margin: 0.5em 0
