--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,7 @@
   background-color: transparent;
   color: var(--text-muted);
   border: none;
+  column-gap: 5px;
   border-radius: 4px;
   padding: 6px;
   cursor: pointer;
@@ -385,6 +386,7 @@
   grid-template-columns: repeat(7, 1fr);
   gap: 4px;
   margin-bottom: 8px;
+  height: 16.6666666667%;
   padding: 8px 0;
   border-bottom: 1px solid var(--background-modifier-border);
 }
@@ -698,13 +700,14 @@
   flex-direction: column;
   height: 100%;
   overflow: hidden;
+  justify-content: flex-start;
 }
 
 .month-view {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: 80%;
   padding: 20px;
   box-sizing: border-box;
   background-color: var(--background-primary);
@@ -766,6 +769,7 @@
 }
 .month-view .month-grid {
   display: grid;
+  height: 100%;
   grid-template-columns: repeat(7, 1fr);
   gap: 1px;
   flex: 1;
@@ -775,7 +779,8 @@
 .month-view .month-grid .month-day {
   background-color: var(--background-primary);
   padding: 8px;
-  min-height: 100px;
+  max-height: 150px;
+  overflow: auto;
   display: flex;
   flex-direction: column;
 }
