--- a/styles.sass
+++ b/styles.sass
@@ -85,6 +85,7 @@
         background-color: transparent
         color: var(--text-muted)
         border: none
+        column-gap: 5px
         border-radius: 4px
         padding: 6px
         cursor: pointer
@@ -397,6 +398,7 @@
     grid-template-columns: repeat(7, 1fr)
     gap: 4px
     margin-bottom: 8px
+    height: calc(100% / 6)
     padding: 8px 0
     border-bottom: 1px solid var(--background-modifier-border)
 
@@ -730,12 +732,13 @@
       flex-direction: column
       height: 100%
       overflow: hidden
+      justify-content: flex-start
 
 .month-view 
     display: flex
     flex-direction: column
     width: 100%
-    height: 100%
+    height: 80%
     padding: 20px
     box-sizing: border-box
     background-color: var(--background-primary)
@@ -802,6 +805,7 @@
     // 日历网格
     .month-grid 
         display: grid
+        height: 100%
         grid-template-columns: repeat(7, 1fr)
         gap: 1px
         flex: 1
@@ -812,7 +816,8 @@
         .month-day 
             background-color: var(--background-primary)
             padding: 8px
-            min-height: 100px
+            max-height: 150px
+            overflow: auto
             display: flex
             flex-direction: column
 
@@ -859,9 +864,6 @@
                     &:hover 
                         background-color: var(--background-modifier-hover)
                         color: var(--text-normal)
-
-
-
 
 
 
